contrast fix

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ li a:active {
 }
 
 li a.current{
-  background-color:#e0e422;
+  background-color:#b4b815;
   font-style:italic;
 }
 
